--- a/angular.json
+++ b/angular.json
@@ -30,7 +30,7 @@
             "tsConfig": "tsconfig.app.json",
             "aot": true,
             "assets": [
-              "src/favicon.ico",
+              "src/assets/images/madIcon.svg",
               "src/assets"
             ],
             "styles": [
@@ -114,7 +114,7 @@
             "tsConfig": "tsconfig.spec.json",
             "karmaConfig": "karma.conf.js",
             "assets": [
-              "src/favicon.ico",
+              "src/assets/images/madIcon.svg",
               "src/assets"
             ],
             "styles": [
